# bahn

./: Main.hs  README.md  bahn.cabal  bahn.hs  stack.yaml
bahn/: Makefile  README.md  bahn.cabal
bahn-cli/: LICENSE  Main.hs  bahn-cli.cabal
bahn/client/: Main.hs
bahn/lib/: Apis.hs
bahn/lib/Bahn/: API.hs  Types.hs
bahn/lib/Web/Bahn/: DefaultApi.hs
bahn/lib/Web/Bahn/Model/: ArrivalBoard.hs  ArrivalBoardResponse.hs  DepartureBoard.hs  DepartureBoardResponse.hs  DepartureOrArrival.hs  JourneyDetail.hs  JourneyDetailRef.hs  JourneyDetailResponse.hs  LocalDate.hs  LocalTime.hs  LocationList.hs  LocationResponse.hs  Name.hs  Names.hs  Note.hs  Notes.hs  Operator.hs  Operators.hs  Stop.hs  StopLocation.hs  Stops.hs  Type.hs  Types.hs
